update html stylings, fix major error

--- a/html/output.html
+++ b/html/output.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML><html><head><title>bxdebugger Report</title><link rel='stylesheet' href='style.css'/></head><body>
 <h2>bxdebugger 0.1</h2>
-<div class='warning'>Line: 2: REM Error hi</div>
-<div class='warning'>Line: 3: REM Error bye</div>
+<div class='warning'>Line 2: REM Error hi</div>
+<div class='warning'>Line 3: REM Error bye</div>
 <div class='warning'></div>
 </body></html>
